POCT-app/service.yml
apiVersion: v1
kind: Service
metadata:
  name: poct-service
  namespace: argotest
spec:
  selector:
    app: poct
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
