POCT-app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: poct-ingress
  namespace: argotest
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  tls:
    - hosts:
        - myapp.example.com
      secretName: my-tls-secret
  rules:
    - host: myapp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: poct-service
                port:
                  number: 80
